<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="com.spinages.rewards.RedeemCodeActivity">
    <TextView
        android:id="@+id/title"
        android:text="Redeem Code"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/activityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.CardView
        android:id="@+id/card_view1"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20ROR"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_margin="@dimen/_10ROR"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/code"
                android:layout_marginTop="@dimen/_30ROR"
                android:layout_marginBottom="@dimen/_10ROR"
                android:layout_marginLeft="@dimen/_20ROR"
                android:layout_marginRight="@dimen/_20ROR"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40ROR"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/_10ROR"

                android:textColorHint="@color/textcolor"
                android:hint="@string/hint_text"
                android:background="#666666"
                android:textSize="@dimen/medium" />

            <Button
                android:id="@+id/apply_but"
                android:layout_margin="@dimen/_20ROR"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40ROR"
                android:layout_below="@+id/code"
                android:text="@string/button"
                android:textAllCaps="false"
                android:textColor="@color/textcolor"
                android:background="@color/button_background"
                android:textSize="@dimen/large" />



        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/announcement"
        android:text="@string/announcement"
        android:textColor="#fafafa"
        android:layout_above="@+id/hey"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/large"/>
    <TextView
        android:id="@+id/hey"
        android:text="@string/hey"
        android:textColor="#fafafa"
        android:layout_above="@+id/announ_text"
        android:layout_marginBottom="@dimen/_5ROR"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium"/>
    <TextView
        android:id="@+id/announ_text"
        android:text="@string/annoucemnet_text"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:textColor="#fafafa"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10ROR"
        android:gravity="center"
        android:textSize="@dimen/small"/>

</RelativeLayout>
